--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,45 +9,48 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 </head>
+
 <body>
     <div>
         <form>
             <h1 class="text-red-500 text-2xl text-center font-semibold m-5">Employee Registration Form</h1>
             <div class="text-center">
-                <input type="radio" id="mr"  name="pre" >
+                <input type="radio" id="mr" name="pre">
                 <label for="mr">Mr</label>
-                <input type="radio" id="mrs"  name="pre">
+                <input type="radio" id="mrs" name="pre">
                 <label for="mrs">Mrs</label>
-                <input type="radio" id="ms"  name="pre">
+                <input type="radio" id="ms" name="pre">
                 <label for="ms">Ms</label>
             </div>
 
             <div class="flex flex-col text-center">
                 <div class="m-1">
-                    <label for="fname" >First Name</label>
-                    <input type="text" id="fname" placeholder="First Name" class="border-solid border-2 border-gray-200 ml-10">
+                    <label for="fname">First Name</label>
+                    <input type="text" id="fname" placeholder="First Name"
+                        class="border-solid border-2 border-gray-200 ml-10">
                 </div>
 
                 <div class="m-1">
-                    <label for="lname" >Last Name</label>
-                    <input type="text" id="lname" placeholder="Last Name" class="border-solid border-2 border-gray-200 ml-10">
+                    <label for="lname">Last Name</label>
+                    <input type="text" id="lname" placeholder="Last Name"
+                        class="border-solid border-2 border-gray-200 ml-10">
                 </div>
 
                 <div class="m-1">
-                    <label for="mail1" >Mail Address 1</label>
-                    <input type="text" id="mail1"  class="border-solid border-2 border-gray-200 ml-4">
+                    <label for="mail1">Mail Address 1</label>
+                    <input type="text" id="mail1" class="border-solid border-2 border-gray-200 ml-4">
                 </div>
 
                 <div class="m-1">
-                    <label for="mail2" >Mail Address 2</label>
-                    <input type="text" id="mail2"  class="border-solid border-2 border-gray-200 ml-4">
+                    <label for="mail2">Mail Address 2</label>
+                    <input type="text" id="mail2" class="border-solid border-2 border-gray-200 ml-4">
                 </div>
 
                 <div class="ml-1">
                     <label for="city" class="mr-20">City</label>
-                    <input type="text" id="city"  class="border-solid border-2 border-gray-200 ml-3">
+                    <input type="text" id="city" class="border-solid border-2 border-gray-200 ml-3">
                 </div>
-               
+
                 <div class="ml-1">
                     <label for="state" class="mr-20">State</label>
                     <select name="state" id="state" class="ml-20">
@@ -54,13 +58,53 @@
                         <option value="">Maharashtra</option>
                     </select>
                 </div>
-                
+
                 <div class="ml-1">
                     <label for="city" class="mr-20">Zip</label>
-                    <input type="text" id="city"  class="border-solid border-2 border-gray-200 ml-3">
+                    <input type="text" id="city" class="border-solid border-2 border-gray-200 ml-3">
+                </div>
+
+                <div class="m-1">
+                    <input type="file" id="myfile">
+                    <input type="submit" value="">
+                </div>
+
+                <div class="m-1">
+                    <label for="email" class="mr-5">E-Mail</label>
+                    <input type="email" id="email" class="border-solid border-2 border-gray-200 ml-4">
+                </div>
+
+                <div class="m-1">
+                    <label for="no" class="">Mobile no</label>
+                    <input type="number" id="no" class="border-solid border-2 border-gray-200 ml-4">
+                </div>
+
+                <div > 
+                   <div class="flex ml-96" >
+                    <label for="" class="ml-24">Language Known</label>
+                    <div class="flex flex-col">
+                        <div class="ml-5">
+                            <input type="checkbox" name="gujarati" id="gujarati">
+                            <label for="gujarati">Gujrati</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" name="marathi" id="">
+                            <label for="marathi">Hindi</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" name="hindi" id="">
+                            <label for="english">Hindi</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" name="english" id="">
+                            <label for="english">English</label>
+                        </div>
+                    </div>
+                   </div>
                 </div>
             </div>
         </form>
     </div>
 </body>
+
 </html>
