--- a/index.html
+++ b/index.html
@@ -102,6 +102,17 @@
                     </div>
                    </div>
                 </div>
+
+                <div>
+                    <label for="add">Additional Inforamtion</label>
+                    <textarea name="" id="" cols="20" rows="5"  class="border-solid border-2 border-gray-200 ml-10"></textarea>
+                </div>
+                
+                <div class="m-54">
+                    <button class="border-solid border-2 border-gray-200 m-1 bg-slate-100 w-16 text-center mr-16">Submit</button>
+                    <button class="border-solid border-2 border-gray-black m-1 bg-slate-100">Reset</button>
+                </div>
+               
             </div>
         </form>
     </div>
